# kx-hub

./: .dockerignore.mcp-server  .gitignore  =1.3.0  CLAUDE.md  DEPLOYMENT.md  Dockerfile.mcp-consolidated  Dockerfile.mcp-server  Dockerfile.mcp-server-ts  Dockerfile.mcp-tools-api  Dockerfile.oauth-service  MIGRATION_TO_FIRESTORE_VECTOR.md  README.md  SETUP.md  TODO.md  cloudbuild.mcp-consolidated.yaml  cloudbuild.mcp-server-ts.yaml  cloudbuild.mcp-tools-api.yaml  cloudbuild.oauth-service.yaml  comparison_results.npz  get_job_results.py  load-to-bigquery.sh  package-lock.json  pyproject.toml  requirements-import.txt  verify-deployment.sh
bmad/: my_workflow.md
docs/: OAUTH_SETUP.md  TODO.md  ai-model-analysis.md  architecture.md  architecture.md.old  backlog.md  bmm-workflow-status.yaml  brief.md  commercialize.md  delta-2026-03-06.md  epic-2-prd.md  epic4.md  epic6.md  epics.md  future-features.md  kx-mgmt.md  mcp-remote-deployment.md  mcp-server-setup.md  mcp-server-usage.md  prd.md  prd.md.old  sprint-change-proposal-2025-11-02.md  sprint-change-proposal-2025-11-20.md  sprint-status.yaml
scripts/: analyze_entity_types.py  analyze_threshold.py  backfill_highlighted_at.py  backfill_problem_evidence.py  compare_clustering_approaches.py  compare_clustering_dimensions.py  compare_minibatch_kmeans.py  debug_similarity.py  deploy_hybrid_mcp.sh  deploy_oauth_mcp.sh  generate_local_secrets.sh  migrate_highlighted_at.py  migrate_to_sources.py  reprocess_truncated.py  test_oauth_flow.sh
src/llm/: README.md  __init__.py  base.py  claude.py  config.py  gemini.py  publish.sh  pyproject.toml  regenerate.py  requirements.txt
src/llm/kx_llm/: __init__.py  config.py  gemini.py
terraform/: async_jobs.tf  auto_snippets.tf  cloud_scheduler.tf  clustering.tf  firestore_indexes.tf  knowledge_cards.tf  main.tf  newsletter.tf  relationships.tf  summary.tf  terraform.tfstate.1761601791.backup  terraform.tfstate.1763753753.backup  tfplan  variables.tf
tests/: test_article_ideas.py  test_async_jobs.py  test_auto_snippets.py  test_chunker.py  test_cluster_relationships.py  test_clusterer.py  test_date_extractor.py  test_embed.py  test_ingest.py  test_integration_chunking.py  test_integration_clustering.py  test_integration_knowledge_cards.py  test_knowledge_card_schema.py  test_mcp_enhancements.py  test_mcp_server_sse.py  test_mcp_tools.py  test_newsletter.py  test_normalize.py  test_problem_matcher.py  (+10 more)
(+260 files in other folders)
