[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kx-hub"
version = "0.1.0"
description = "KX Hub - Knowledge Exchange Platform"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-firestore>=2.11.0",
    "google-cloud-aiplatform>=1.38.0",
    "numpy>=1.24.0",
    "anthropic[vertex]>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
